--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
@@ -28,7 +28,7 @@
                             @* the way add-another works, we need data-name for data-id to work *@
                             <select name="language" class="govuk-select" id="language-@index" data-name="language" data-id="language-%index%">
                                 @* todo: when showing error after PRG, need to add errored option*@
-@*                                 <!option value="cack" selected hidden disabled>Some cack</!option> *@
+                                @*                                 <!option value="cack" selected hidden disabled>Some cack</!option> *@
                                 @foreach (var option in Model.LanguageOptions)
                                 {
                                     <!option value="@option.Value"
@@ -42,6 +42,8 @@
                                     <option value="@item.Value" selected hidden disabled>@item.Text</option>
                                 })
                             </select>
+@*                             <input type="hidden" name="language" value="@What_LanguageModel.AllLanguagesValue" /> *@
+                            @* todo: hidden input *@
                         </div>
                         @if (Model.UserLanguageOptions.Count() > 1)
                         {
@@ -50,6 +52,7 @@
                         }
                     </fieldset>
                 }
+                <input type="hidden" name="language" value="@What_LanguageModel.AllLanguagesValue" />
                 
                 <button type="submit" name="button" value="add" class="govuk-button fh-add-another__add-button govuk-button--secondary govuk-!-margin-bottom-4" data-module="govuk-button">Add another language</button>
 
