--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
@@ -52,7 +52,7 @@
                         }
                     </fieldset>
                 }
-                <input type="hidden" name="language" value="@What_LanguageModel.AllLanguagesValue" />
+@*                 <input type="hidden" name="language" value="@What_LanguageModel.AllLanguagesValue" /> *@
                 
                 <button type="submit" name="button" value="add" class="govuk-button fh-add-another__add-button govuk-button--secondary govuk-!-margin-bottom-4" data-module="govuk-button">Add another language</button>
 
