--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
@@ -25,9 +25,7 @@
                             <label for="language-@index" class="govuk-label">Enter a language</label>
                             @* the way add-another works, we need data-name for data-id to work *@
                             <select name="language" class="govuk-select" id="language-@index" data-name="language" data-id="language-%index%">
-                                @* todo: when showing error after PRG, need to add errored option*@
-                                @*                                 <!option value="cack" selected hidden disabled>Some cack</!option> *@
-                                @foreach (var option in Model.LanguageOptions)
+                                @foreach (var option in What_LanguageModel.LanguageOptions)
                                 {
                                     <!option value="@option.Value"
                                              @(option.Value == item.Value ? "selected" : "")
