--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times.cshtml
@@ -37,37 +37,46 @@
                     </div>
                     <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-contact">
                         
-                        <div class="govuk-date-input" id="passport-issued">
-                            <div class="govuk-date-input__item">
-                                <div class="govuk-form-group">
-                                    <label class="govuk-label govuk-date-input__label" for="weekdays-start-hour">
-                                        Hour
-                                    </label>
-                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="weekdays-start-hour" name="weekdays-start-hour" type="text" inputmode="numeric">
-                                </div>
-                            </div>
-                            <div class="govuk-date-input__item">
-                                <div class="govuk-form-group">
-                                    <label class="govuk-label govuk-date-input__label" for="weekdays-start-minute">
-                                        Minute
-                                    </label>
-                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="weekdays-start-minute" name="weekdays-start-minute" type="text" inputmode="numeric">
-                                </div>
-                            </div>
-                            <div class="govuk-date-input__item">
-                                <div class="govuk-form-group">
-                                    <label class="govuk-label govuk-date-input__label govuk-visually-hidden" for="weekdays-start-ampm">
-                                        Am or pm
-                                    </label>
-                                    @* todo: no inline style - check different browsers *@
-                                    @* todo: remove input styles *@
-                                    <select style="min-width: 2.5em" class="govuk-select govuk-date-input__input govuk-input--width-2" id="weekdays-start-ampm" name="weekdays-start-ampm">
-                                        <option value="am" selected>am</option>
-                                        <option value="pm">pm</option>
-                                    </select>
+                        <div class="govuk-form-group">
+                            <fieldset class="govuk-fieldset" role="group">
+                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                                    Starts
+                                </legend>
+                                <div class="govuk-date-input">
+                                    <div class="govuk-date-input__item">
+                                        <div class="govuk-form-group">
+                                            <label class="govuk-label govuk-date-input__label" for="weekdays-start-hour">
+                                                Hour
+                                            </label>
+                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="weekdays-start-hour" name="weekdays-start-hour" type="text" inputmode="numeric">
+                                        </div>
+                                    </div>
+                                    <div class="govuk-date-input__item">
+                                        <div class="govuk-form-group">
+                                            <label class="govuk-label govuk-date-input__label" for="weekdays-start-minute">
+                                                Minute
+                                            </label>
+                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="weekdays-start-minute" name="weekdays-start-minute" type="text" inputmode="numeric">
+                                        </div>
+                                    </div>
+                                    <div class="govuk-date-input__item">
+                                        <div class="govuk-form-group">
+                                            <label class="govuk-label govuk-date-input__label govuk-visually-hidden" for="weekdays-start-ampm">
+                                                Am or pm
+                                            </label>
+                                            @* todo: no inline style - check different browsers *@
+                                            @* todo: remove input styles *@
+                                            <select style="min-width: 2.5em" class="govuk-select govuk-date-input__input govuk-input--width-2" id="weekdays-start-ampm" name="weekdays-start-ampm">
+                                                <option value="am" selected>am</option>
+                                                <option value="pm">pm</option>
+                                            </select>
 
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
+                            </fieldset>
+                        </div>
+
                         </div>
                         
 
