--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Time.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Time.cshtml
@@ -2,7 +2,7 @@
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.TimeModel
 
 <div class="govuk-form-group">
-    <fieldset class="govuk-fieldset" role="group">
+    <fieldset class="govuk-fieldset" role="group" aria-describedby="@Model.HintId">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
             @Model.Description
         </legend>
