--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times.cshtml
@@ -37,8 +37,8 @@
                                 Enter times. For example, starts at 9:00am and finishes at 2:30pm.<br />You can provide specific opening times on the next page.
                             </div>
 
-                            <partial name="_Time" model="timesModel.WeekdaysStarts" />
-                            <partial name="_Time" model="timesModel.WeekdaysFinishes" />
+                            <partial name="_Time" model="timesModel.WeekdaysStartsComponent" />
+                            <partial name="_Time" model="timesModel.WeekdaysFinishesComponent" />
 
                         </div>
                         <div class="govuk-checkboxes__item">
@@ -53,8 +53,8 @@
                                 Enter times. For example, starts at 9:00am and finishes at 2:30pm.<br />You can provide specific opening times on the next page.
                             </div>
 
-                            <partial name="_Time" model="timesModel.WeekendsStarts" />
-                            <partial name="_Time" model="timesModel.WeekendsFinishes" />
+                            <partial name="_Time" model="timesModel.WeekendsStartsComponent" />
+                            <partial name="_Time" model="timesModel.WeekendsFinishesComponent" />
 
                         </div>
                     </div>
